--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
                 <img src="images/illustration-mockups.svg" alt="mockup image">
             </div>
             <div class="hero-text">
-                <h1>Build The Community Your Fans Will Love</h1>
-                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-                <div class="register-btn">
-                    <button type="button">Register</button>
+                <div class="text-container">
+                    <h1>Build The Community Your Fans Will Love</h1>
+                    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                        Create connections with your users as you engage in genuine discussion.</p>
+                    <div class="register-btn">
+                        <button type="button">Register</button>
+                    </div>
                 </div>
 
             </div>
